Update Docker to Java 17.